force-app/main/default/objects/Pricing_Version__mdt/Pricing_Version__mdt.object-meta.xml
<CustomObject>
    <description>Stores data about product pricing and data associated with the new (2021) web purchasing process.</description>
    <label>Pricing Version</label>
    <pluralLabel>Pricing Versions</pluralLabel>
</CustomObject>