force-app/main/default/objects/Pricing_Version__mdt/fields/Default_Repayment_Period__c.field-meta.xml
<CustomField>
    <fullName>Default_Repayment_Period__c</fullName>
    <description>The payment period, in number of months, that is the default for this version.</description>
    <label>Default Repayment Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>