force-app/main/default/objects/Pricing_Version__mdt/fields/Default_Upfront_Payment__c.field-meta.xml
<CustomField>
    <fullName>Default_Upfront_Payment__c</fullName>
    <description>The default upfront payment for this version.</description>
    <label>Default Upfront Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>