force-app/main/default/objects/Pricing_Version__mdt/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if this is the default Pricing Version for the website.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>