force-app/main/default/objects/Pricing_Version__mdt/fields/Maximum_Specialist_Lifetime_Discount__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Specialist_Lifetime_Discount__c</fullName>
    <description>The maximum dollar amount a specialist may discount against the 3 product package with lifetime storage for this version.</description>
    <label>Maximum Specialist Lifetime Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>