force-app/main/default/objects/Pricing_Version__mdt/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>The annual interest rate to apply to financed purchases with this version.</description>
    <label>Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>