force-app/main/default/objects/Pricing_Version__mdt/fields/Upfront_Payment_Floor__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Payment_Floor__c</fullName>
    <description>The lowest upfront payment that can be selected for this version.</description>
    <label>Upfront Payment Floor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>