force-app/main/default/objects/Pricing_Version__mdt/fields/Usernames_With_Manager_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Usernames_With_Manager_Discounts__c</fullName>
    <description>Comma-separated list of usernames, for the users who should get the higher discount permissions.</description>
    <label>Usernames With Manager Discounts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>