force-app/main/default/objects/Pricing_Version__mdt/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>The version number.</description>
    <label>Version Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>