force-app/main/default/objects/Pricing_Version__mdt/listViews/Detail.listView-meta.xml
<ListView>
    <fullName>Detail</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Rate__c</columns>
    <columns>Is_Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>Detail</label>
</ListView>